# wardrobe

./: .gitignore  HISTORY.rst  README.rst  VERSION  package-lock.json  package.json  pyproject.toml  setup.cfg  tailwind.config.js  wsgi.py
docs/: conf.py
migrations/versions/: 2d48e8e9835c_.py  3af62617ee4b_.py  429fbfe291d1_.py  5911f8b5419a_.py  bf112ab3474d_.py  ea2efc4a8908_.py
tests/: __init__.py
wardrobe/: __meta__.py  cli.py
wardrobe/domain/: user.py
wardrobe/flask_social_login/: __init__.py
wardrobe/repositories/: __init__.py
wardrobe/repositories/sqla/: models.py  user.py
wardrobe/request_objects/: user_id.py  user_paginate.py
wardrobe/rest/: __init__.py  proxy.py  schema.py
wardrobe/rest/api/: __init__.py
wardrobe/rest/templates/: authorize.html  home.html  index.html  protected.html
wardrobe/rest/templates/flask_user/: _macros.html  login.html  register.html
wardrobe/rest/templates/layouts/: base-contents.html
wardrobe/rest/views/: __init__.py
wardrobe/services/: grant.py  oauth2.py
wardrobe/use_cases/: user_detail.py  user_paginate.py
wardrobe/webapp/: __init__.py  config.py  proxy.py  schema.py
wardrobe/webapp/api/: __init__.py
wardrobe/webapp/oauth/: __init__.py
wardrobe/webapp/swagger/: __init__.py
wardrobe/webapp/templates/: _bare.html  _with-menu.html  flask_user_layout.html
wardrobe/webapp/templates/_partial/: flash.html  nav.html
wardrobe/webapp/templates/auth/: login.html
wardrobe/webapp/templates/flask_user/: _common_base.html
wardrobe/webapp/views/: __init__.py  forms.py
(+4 files in other folders)
